Add QR code to display

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
         </div>
     </div>
 
+    <div id="qrCodePanel" class="qr-code-panel" style="display: none;">
+        <div class="qr-code-container">
+            <img id="qrCodeImage" class="qr-code-image" alt="QR Code">
+            <div class="qr-code-label" id="qrCodeLabel">Scan to add your photos!</div>
+        </div>
+    </div>
+
     <script src="renderer.js"></script>
 </body>
 </html>
