--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
             <div class="col">
                 <div class="row">
                     <div class="photo-wrapper w50">
-                        <img id="photo1" class="photo" alt="Photo 1">
+                        <img id="photo1" class="photo">
                     </div>
                     <div class="photo-wrapper w50">
-                        <img id="photo2" class="photo" alt="Photo 2">
+                        <img id="photo2" class="photo">
                     </div>
                 </div>
                 <div class="row">
                     <div class="photo-wrapper">
-                        <img id="photo3" class="photo" alt="Photo 3">
+                        <img id="photo3" class="photo">
                     </div>
                 </div>
             </div>
             <div class="col">
                 <div class="row">
                     <div class="photo-wrapper">
-                        <img id="photo4" class="photo" alt="Photo 4">
+                        <img id="photo4" class="photo">
                     </div>
                 </div>
                 <div class="row">
                     <div class="photo-wrapper w50">
-                        <img id="photo5" class="photo" alt="Photo 5">
+                        <img id="photo5" class="photo">
                     </div>
                     <div class="photo-wrapper w50">
-                        <img id="photo6" class="photo" alt="Photo 6">
+                        <img id="photo6" class="photo">
                     </div>
                 </div>
             </div>
